--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,11 @@ black = "^24.10.0"
 isort = "^5.13.2"
 
 
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.3.4"
+pytest-cov = "^6.0.0"
+
 [tool.isort]
 line_length = 119
 
